<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Open">

    <ImageView
        android:id="@+id/IVLogo"
        android:transitionName="appLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="4"
        app:layout_constraintBottom_toTopOf="@+id/TVAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:src="@drawable/klarify_logo"
        />

    <TextView
        android:id="@+id/TVAppName"
        android:transitionName="appName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="1"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textSize="75sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVLogo" />


    <Button
        android:id="@+id/BTNRegister"
        android:transitionName="coloredBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_weight="1"
        android:layout_marginHorizontal="25dp"
        android:text="@string/get_started"
        app:layout_constraintTop_toBottomOf="@id/TVAppName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/BTNLogin"/>

    <Button
        android:id="@+id/BTNLogin"
        android:transitionName="colorlessBtn"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_weight="1"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/existing_user"
        app:layout_constraintTop_toBottomOf="@id/BTNRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>